// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPicker files app bar should show current hint according to the current route action 1`] = `
<p data-testid="location-picker-current-hint" class="oc-text-muted oc-text-meta">Navigate into the desired folder and copy selected resources into it.
  You can navigate into a folder by clicking on its name.
  To navigate back, you can click on the breadcrumbs.
  Resources will be copied into the folder where you are currently located.</p>
`;

exports[`LocationPicker files app bar should show current hint according to the current route action 2`] = `
<p data-testid="location-picker-current-hint" class="oc-text-muted oc-text-meta">Navigate into the desired folder and move selected resources into it.
  You can navigate into a folder by clicking on its name.
  To navigate back, you can click on the breadcrumbs.
  Resources will be moved into the folder where you are currently located.</p>
`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 1`] = `<h1 class="location-picker-selection-info oc-mb">Move into »Personal«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 2`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »Personal«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 3`] = `<h1 class="location-picker-selection-info oc-mb">Move into »child«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 4`] = `<h1 class="location-picker-selection-info oc-mb">Move into »parent«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 5`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »child«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 6`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »parent«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 7`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »टेश्ट«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 8`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »child«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 9`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »child«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 10`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »child«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 11`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »टेश्ट फोल्डर«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 12`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »456«</h1>`;

exports[`LocationPicker files app bar should show location picker selection info according to route action and item 13`] = `<h1 class="location-picker-selection-info oc-mb">Copy into »🔥«</h1>`;

exports[`LocationPicker files view when the view is not loading anymore should show no content message if active files length is less than one 1`] = `<no-content-message-stub icon="folder" id="files-location-picker-empty" class="files-empty"></no-content-message-stub>`;

exports[`LocationPicker files view when the view is still loading should show app-loading-spinner component 1`] = `<app-loading-spinner-stub></app-loading-spinner-stub>`;
